Prevent stars from showing behind menus

--- a/src/App.scss
+++ b/src/App.scss
@@ -21,7 +21,7 @@ html {
 .App {
   align-items: center;
   background: v.$bg-color url('../public/background-stars.svg');
-  background-size: contain;
+  background-size: cover;
   color: white;
   display: flex;
   flex-direction: column;
