--- a/src/components/StatsBox/StatsBox.scss
+++ b/src/components/StatsBox/StatsBox.scss
@@ -1,6 +1,7 @@
 @use 'utils/variables' as v;
 
 .stats-box {
+  background: v.$bg-color;
   border: solid 1px rgba(white, 0.2);
   display: flex;
   flex-direction: row;
